GNOME Bugzilla – Bug 685082
fix memory leak about length arg and type info (_pygi_argument_to_array)
Last modified: 2012-10-04 07:03:40 UTC
Created attachment 225361 [details] [review] length arg and type info memory leak Attach patch fix the memory leak about length_arg_info and length_type_info in _pygi_argument_to_array.
Review of attachment 225361 [details] [review]: Hi Alban, Thanks for the patch. I recommend we switch this part of the code to use stack allocation along with g_callable_info_load_arg and g_arg_info_load_type. Then we won't have to deal with unrefs also making it more robust for the future. There is also a ticket for changing everything over to use this technique: https://bugzilla.gnome.org/show_bug.cgi?id=615982
Thanks Alban! I committed this with a slightly refined changelog. Let's keep bug 615982 for converting everything to stack allocation.