Fix memory leak in _pygi_argument_to_array()

Length arg and type info need to be unref'ed.

https://bugzilla.gnome.org/show_bug.cgi?id=685082